# rabbit-tests

./: .env.example  Cargo.toml  README.md
consumer/: Cargo.toml
consumer/src/: consumer.rs  main.rs
infrastructure/: Cargo.toml
infrastructure/src/amqp/: bus.rs  destination.rs  message.rs  mod.rs  publisher.rs  subscriber.rs
publisher/: Cargo.toml
publisher/src/: main.rs
